# Portfolio

./: .dockerignore  .gitignore  .vercelignore  Dockerfile  docker-compose.yml  ngrok.yml.example  pyproject.toml  vercel.json
.claude/skills/portfolio-update/: SKILL.md
api/: index.py
app/: main.py
app/data/: __init__.py  profile.py  projects.py  skills.py  timeline.py
app/static/css/: custom.css
app/static/js/: charts.js
app/templates/: base.html  index.html  project_detail.html
app/templates/components/: contact.html  hero.html  projects.html  skills.html  timeline.html
docs/: 박문욱_이력서.txt  박문욱_포트폴리오.txt
