[project]
name = "portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.3",
    "jinja2>=3.1.6",
    "neo4j>=6.1.0",
    "playwright>=1.58.0",
    "pymupdf>=1.24,<1.25",
    "python-multipart>=0.0.26",
    "uvicorn[standard]>=0.44.0",
]
